[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_0.png" type="Texture" id=2]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_1.png" type="Texture" id=3]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_2.png" type="Texture" id=4]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_3.png" type="Texture" id=5]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_4.png" type="Texture" id=6]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_5.png" type="Texture" id=7]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_6.png" type="Texture" id=8]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_7.png" type="Texture" id=9]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_8.png" type="Texture" id=10]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_9.png" type="Texture" id=11]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_10.png" type="Texture" id=12]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_11.png" type="Texture" id=13]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_12.png" type="Texture" id=14]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_13.png" type="Texture" id=15]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_14.png" type="Texture" id=16]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_15.png" type="Texture" id=17]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_16.png" type="Texture" id=18]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_17.png" type="Texture" id=19]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_18.png" type="Texture" id=20]
[ext_resource path="res://Top_Down_Survivor/handgun/move/survivor-move_handgun_19.png" type="Texture" id=21]
[ext_resource path="res://Top_Down_Survivor/handgun/move_up/survivor-move_handgun_1_up.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "right",
"speed": 25.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "up",
"speed": 19.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 23.5016
height = 1.46417

[node name="Player" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 150

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "right"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.0170336, 4.09685 )
scale = Vector2( 1.07477, 0.86045 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]


